# advent-of-code-2024

./: pyproject.toml
day_01/: README.md  solution.py
day_02/: README.md  solution.py
day_03/: README.md  solution.py
