[tool.poetry]
name = "advent-of-code-2024"
version = "0.1.0"
description = "Advent of Code 2024 solutions"
authors = ["ThatDevShparki <shparki@thatdev.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
